# Calculator

./: MFC.vcxproj  README.md
Calculator_MFC/: CMakeLists.txt
Calculator_MFC/CMake/: Bin.cpp  CMakeLists.txt  Calculator.h  Hex.cpp  MFCDlg.cpp  MFCDlg.h
Calculator_MFC/inc/: Calculator.h  Hex.h  MFC.rc  MFCDlg.h  Oct.h  resource.h
Calculator_MFC/src/: Bin.cpp  Calculator.cpp  MFC.cpp  Oct.cpp
Calculator_Qt/: CMakeLists.txt
Calculator_Qt/inc/: Bin.h  Hex.h  Oct.h  mainwindow.h
Calculator_Qt/src/: mainwindow.cpp  mainwindow.ui
Google_Test/: test.cpp
Google_Test/src/: Hex.cpp
header/: Bin.h  Calculator.h  Hex.h  Oct.h
src/: Bin.cpp  Calculator.cpp  Hex.cpp  MFCDlg.cpp  Oct.cpp
